Name:             orchid-doc
Version:          0.0.2
Description:      Orchid document library.
Synopsis:         Orchid document library.
Category:         Text
Cabal-version:    >= 1.6
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple
Build-Depends:    base ==3.0.*,
                  bytestring == 0.9.*,
                  xml ==1.3.*,
                  salvia ==0.3.*,
                  extensible-exceptions ==0.1.*,
                  containers ==0.2.*,
                  parsec ==3.0.*,
                  mtl ==1.1.*,
                  encoding ==0.5.*,
                  process ==1.0.*,
                  unix ==2.3.*,
                  nano-md5 ==0.1.*,
                  hscolour ==1.11.*
GHC-Options:      -fglasgow-exts -threaded
HS-Source-Dirs:   src
Other-modules:    Misc.Commons
Exposed-modules:  Text.Document.Document,
                  Text.Document.Core.Type,
                  Text.Document.Core.Processing,
                  Text.Document.Parser.Wiki,
                  Text.Document.Parser.WikiHelper,
                  Text.Document.Plugin.Formula,
                  Text.Document.Plugin.HsColour,
                  Text.Document.Plugin.TOC,
                  Text.Document.Plugin,
                  Text.Document.PluginRegister,
                  Text.Xhtml.Xhtml,
                  Text.Xml.Xml
