Name:             orchid-doc
Version:          0.0.3
Description:      Orchid document library.
Synopsis:         Orchid document library.
Category:         Text
Cabal-version:    >= 1.6
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple
Build-Depends:    base,
                  bytestring,
                  xml,
                  salvia-protocol,
                  salvia,
                  extensible-exceptions,
                  containers,
                  parsec == 2.1.*,
                  transformers,
                  monads-fd,
                  encoding,
                  process,
                  unix,
                  nano-md5,
                  hscolour
GHC-Options:      -fglasgow-exts -threaded
HS-Source-Dirs:   src
Other-modules:    Misc.Commons
Exposed-modules:  Text.Document.Document,
                  Text.Document.Core.Type,
                  Text.Document.Core.Processing,
                  Text.Document.Parser.Wiki,
                  Text.Document.Parser.WikiHelper,
                  Text.Document.Plugin.Formula,
                  Text.Document.Plugin.HsColour,
                  Text.Document.Plugin.TOC,
                  Text.Document.Plugin,
                  Text.Document.PluginRegister,
                  Text.Xhtml.Xhtml,
                  Text.Xml.Xml
