Name:             orchid-doc
Version:          0.0.3
Description:      Orchid document library.
Synopsis:         Orchid document library.
Category:         Text
Cabal-version:    >= 1.6
License:          BSD3
License-file:     LICENSE
Author:           Sebastiaan Visser
Maintainer:       sfvisser@cs.uu.nl
Build-Type:       Simple
Build-Depends:    base ==4.*,
                  xml ==1.3.*,
                  salvia-protocol ==0.1.*,
                  process ==1.0.*,
                  unix ==2.4.*,
                  nano-md5 ==0.1.*,
                  bytestring ==0.9.*,
                  extensible-exceptions ==0.1.*,
                  hscolour ==1.15,
                  containers ==0.3.*,
                  transformers ==0.1.*,
                  parsec ==2.1.*
GHC-Options:      -fglasgow-exts -threaded
HS-Source-Dirs:   src
Other-modules:    Misc.Commons
Exposed-modules:  Text.Document.Document,
                  Text.Document.Core.Type,
                  Text.Document.Core.Processing,
                  Text.Document.Parser.Wiki,
                  Text.Document.Parser.WikiHelper,
                  Text.Document.Plugin.Formula,
                  Text.Document.Plugin.HsColour,
                  Text.Document.Plugin.TOC,
                  Text.Document.Plugin,
                  Text.Document.PluginRegister,
                  Text.Xhtml.Xhtml,
                  Text.Xml.Xml
